@@ -1,4 +1,4 @@
-* wrap option
+* parsing symlinks on DOS servers
 * site exec
 * <local> mode
 * decent documentation
