@@ -1,3 +1,10 @@
+1997-12-02  Dieter Baron  <dillo@danbala.tuwien.ac.at>
+
+	* fn_scroll.c (aux_scroll_line): handle `opt_wrap'.
+	(aux_scroll_page): handle `opt_wrap'.
+
+	* options.op (opt_wrap): new option.
+
 1997-11-24  Dieter Baron  <dillo@danbala.tuwien.ac.at>
 
 	* ftp.c (ftp_list): dup path before storing in dir structure.
